gcc/testsuite/rust/rustc/ui/parser/lex-bad-token.rs
â— // { dg-error "" "" { target *-*-* } }

fn main() {}

